syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.com.unary.initcopy.grpc";
option java_outer_classname = "IC_Service";

import "init_copy_entity.proto";

package cn.com.unary.initcopy.grpc;

service InitCopy { 
    rpc Add (cn.com.unary.initcopy.grpc.entity.SyncTask) returns (cn.com.unary.initcopy.grpc.entity.ExecResult) {};
    rpc Query (cn.com.unary.initcopy.grpc.entity.QueryTask) returns (cn.com.unary.initcopy.grpc.entity.TaskState) {};
    rpc Delete (cn.com.unary.initcopy.grpc.entity.DeleteTask) returns (cn.com.unary.initcopy.grpc.entity.ExecResult) {};
    rpc Modify (cn.com.unary.initcopy.grpc.entity.ModifyTask) returns (cn.com.unary.initcopy.grpc.entity.ExecResult) {};
}